--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "3.4.8",
     "jade": "*",
     "less-middleware": "*",
-    "socket.io": "~0.9.16"
+    "socket.io": "~0.9.16",
+    "gravatar": "*"
   }
 }
