Add Jack as contributor; fix room title regex; allow multiple rows of voters

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Agile Estimation with Sockets",
   "author": "Michael Barrett @twisterghost",
   "contributors":[
-    "Nick Swider @swider"
+    "Nick Swider @swider",
+    "Jack Anderson @jackwanders"
   ],
   "scripts": {
     "start": "node app.js"
