Add MongoDB, start tracking rooms and showing stats, Resolves #1
Next Steps:
* Move DB init and model requires out into separate incude that registers mongoose models
* move index render method back out to the route include
* track number of votes in rooms
* limit stats to rooms updated in the last hour
* display stats for number of voters and votes

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jade": "*",
     "less-middleware": "*",
     "socket.io": "~0.9.16",
-    "gravatar": "*"
+    "gravatar": "*",
+    "mongoose": "3.8.x",
+    "lodash": "*"
   }
 }
