--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "socket.io": "~0.9.16",
     "gravatar": "*",
     "mongoose": "3.8.x",
-    "lodash": "*"
+    "lodash": "*",
+	"jira": "*"
   }
 }
