--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Michael Barrett @twisterghost",
   "contributors":[
     "Nick Swider @swider",
-    "Jack Anderson @jackwanders"
+    "Jack Anderson @jackwanders",
+    "@rektide"
   ],
   "scripts": {
     "start": "node app.js"
@@ -18,7 +19,7 @@
   "dependencies": {
     "express": "3.4.8",
     "jade": "*",
-    "less-middleware": "*",
+    "less-middleware": "^0.2",
     "socket.io": "~0.9.16",
     "gravatar": "*",
     "mongoose": "3.8.x",
