--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "dependencies": {
     "express": "3.4.8",
-    "jade": "*",
-    "less-middleware": "*",
-    "socket.io": "~0.9.16",
-    "gravatar": "*",
-    "mongoose": "3.8.x",
-    "lodash": "*"
+    "jade": "1.6.0",
+    "less-middleware": "1.0.4",
+    "socket.io": "0.9.16",
+    "gravatar": "1.0.6",
+    "mongoose": "3.8.0",
+    "lodash": "3.10.0"
   }
 }
