--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "lodash": "3.10.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-jshint": "^0.11.2",
-    "load-grunt-tasks": "^3.2.0"
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.6.1",
+    "eslint-plugin-jsx-a11y": "^1.0.3"
   }
 }
