--- a/package.json
+++ b/package.json
@@ -10,24 +10,28 @@
   ],
   "scripts": {
     "start": "node app.js",
-    "build": "lessc --clean-css=advanced --source-map ./public/stylesheets/style.less ./public/stylesheets/style.css"
+    "build": "lessc --clean-css=advanced --source-map ./public/stylesheets/style.less ./public/stylesheets/style.css",
+		"lint": "eslint ."
   },
   "engines": {
     "node": "4.2.*",
     "npm": "2.14.7"
   },
   "dependencies": {
-    "express": "3.4.8",
-    "jade": "1.11.0",
-    "socket.io": "0.9.16",
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
+    "errorhandler": "^1.4.3",
+    "express": "4.13.4",
+    "express-favicon": "^1.0.1",
     "gravatar": "1.5.2",
-    "lodash": "3.10.0"
+    "jade": "1.11.0",
+    "lodash": "3.10.0",
+    "morgan": "^1.7.0",
+    "serve-static": "^1.10.2",
+    "socket.io": "0.9.16"
   },
   "devDependencies": {
     "eslint": "^2.8.0",
-    "eslint-config-airbnb": "^8.0.0",
-    "eslint-plugin-import": "^1.6.1",
-    "eslint-plugin-jsx-a11y": "^1.0.3",
     "less": "^2.6.1",
     "less-plugin-clean-css": "^1.5.1"
   }
