--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.0",
+    "bunyan": "^1.8.9",
     "cookie-parser": "^1.4.1",
     "errorhandler": "^1.4.3",
     "express": "4.13.4",
